# edgarcnp.dev

./: .gitignore  AGENTS.md  COPYRIGHT  Cargo.toml  Dioxus.toml  LICENSE  LICENSE-MIT  PLAN.md  README.md  SPEC.md  astro.config.mjs  build.rs  eslint.config.js  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tailwind.css  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
.forgejo/workflows/: check.yml  ci.yml  renovate.yml
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  codeql.yml  project-board-issue.yml  project-board-pr.yml  project-board-pullrequest.yml  project-board-readytomerge.yml  superlinter-main.yml  superlinter-pr.yml
.run/: edgarcnp_dev.run.xml
assets/: tailwind.css
backend/: Cargo.toml
backend/config/: development.yaml  test.yaml
backend/examples/: playground.rs
base/: forms.py  urls.py  views.py
cloudflare/: _headers
config/: development.yaml  test.yaml
content/: capabilities.toml  contact.toml  profile.toml
content/projects/: progressive-loading-system.md  progressive-loading-system.toml  secure-portfolio-platform.md  secure-portfolio-platform.toml  structured-portfolio-content.md  structured-portfolio-content.toml  worker-security-header-layer.md  worker-security-header-layer.toml
content/writing/: secure-portfolio-foundation.md
edgarcnp_dev/: asgi.py  settings.py  urls.py  wsgi.py
examples/: playground.rs
frontend/: documentation.html  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.html
public/: _headers  robots.txt  sitemap.xml
scripts/: generate-sitemap.ts
server/plugins/: security-headers.ts
src/: TweenMax.min.js  aos.js  app.css  app.tsx  bootstrap.bundle.min.js  contact.js  content.config.ts  data.rs  entry-client.tsx  entry-server.tsx  env.d.ts  isotope.js  jquery.magnific-popup.min.js  jquery.mb.YTPlayer.js  jquery.simple-text-rotator.js  jquery.wavify.js  main.rs  middleware.ts  owl.carousel.min.js  parallax.js  particles.app.js  particles.js  purify.min.js  wavify.js
src/api/: health.ts  index.ts  news.ts  rss.ts
src/components/: BlueprintFrame.astro  CapabilityGrid.astro  ContactEndpoint.astro  LinkAction.astro  ProjectCard.astro  SectionHeading.astro  Shimmer.tsx  StatusBadge.astro  action_link.rs  blueprint_diagram.rs  blueprint_frame.rs  breakpoint_strip.rs  capability_grid.rs  contact_endpoint.rs  footer.rs  mod.rs  project_card.rs  scene_canvas.rs  section_heading.rs  shimmer-math.ts  skeleton.rs
src/data/: capabilities.json  contact.json  domain.rs  loader.rs  markdown.rs  mod.rs  parser.rs  profile.json  schemas.ts  sources.rs  tests.rs  types.rs  validation.rs
src/layouts/: Layout.astro
src/lib/: content.ts  crypto.ts  errors.ts  guards.ts  math.ts  meta.tsx  schemas.ts  server-content.ts  trusted-types.ts  types.ts
src/pages/: 404.astro  contact.astro  error.astro  index.astro
src/renderer/: app.rs  gpu.rs  input.rs  layout.rs  mod.rs  pipeline.rs  scene.rs
src/routes/: [...error].tsx  contact.tsx  index.tsx
src/styles/: animations.css  base.css  components.css  global.css  shimmer.css  theme.css  ui.css
src/views/: contact.rs  home.rs  layout.rs  mod.rs  not_found.rs  project_detail.rs  projects.rs  (+1 more)
templates/: base_home.html  home.html  navbar.html
tests/: shader_validation.rs
(+236 files in other folders)
