[package]
name = "edgarcnp-dev"
version = "0.1.0"
authors = ["Edgar Christian <me@edgarcnp.dev>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["derive"], optional = true }
dioxus = { version = "0.7", features = ["router", "fullstack"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "MediaQueryList",
    "MouseEvent",
    "MutationObserver",
    "MutationObserverInit",
    "Node",
    "NodeList",
    "ResizeObserver",
    "Window",
] }
wgpu = { version = "29", default-features = false, features = [
    "std",
    "webgpu",
    "wgsl",
], optional = true }

[dev-dependencies]
naga = "29.0.3"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = [
    "dep:bytemuck",
    "dioxus/web",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:wgpu",
]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
